# fileToMarkdown

./: README.md  pyproject.toml
file_to_markdown_conversion/: main.py  test_csv.csv  test_excel.xlsx
file_to_markdown_conversion/excel/: excel_parser.py
file_to_markdown_conversion/html_parser/: html_parser.py
file_to_markdown_conversion/image/: text_from_image.py
